# pydict

./: README.md  helpers.py  pydict.py  pyproject.toml
src/pydict/: __main__.py  helpers.py  settings.py
